--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^1.13.3",
+    "bulma": "^0.9.3",
     "gatsby": "^4.0.2",
     "gatsby-plugin-mdx": "^3.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
