Add digital garden content

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,10 @@ compile_sass = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 
+taxonomies = [
+  {name = "tags"},
+]
+
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
@@ -14,3 +18,6 @@ highlight_code = true
 
 [extra]
 # Put all your custom variables here
+author = "Ian Johnson"
+github = "tacoda"
+twitter = ""
